@@ -1,6 +1,7 @@
 
-Thanks to the following for contributing examples and demos:
+Thanks to the following for code, examples or demos:
 
-Hans-Joerg Bibiko, bibiko at eva.mpg.de
+Duncan Murdoch, murdoch at stats dot uwo dot ca
+Hans-Joerg Bibiko, bibiko at eva dot mpg dot de
 Stefan Th. Gries, stgries at linguistics dot ucsb dot edu
 
